gitops/manifests/kyverno/policies/verify-image-signature.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: verify-image-signature
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-signature
      match:
        any:
          - resources:
              namespaces:
                - devsecops-app
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "393818036545.dkr.ecr.us-east-1.amazonaws.com/devsecops-pipeline-secure:*"
            - "me-west1-docker.pkg.dev/*/devsecops-pipeline-secure/*"
          attestors:
            - count: 1
              entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEOI3OsCbTvpBB5jbMi7hQnwzkr2MT
[...]
                      -----END PUBLIC KEY-----
